# data-generation-utils

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/dgu/: dgu.hpp  generators.hpp
include/dgu/detail/: string_extractor.hpp  tuple_struct.hpp
